# TOT2025

./: CMakeLists.txt  README_TOT2025.md  TOT2025_presentation.pptx
src/: expressparser.cpp  expressparser.h  gfcparser.cpp  gfcparser.h  main.cpp  mainwindow.cpp  mainwindow.h
